<resources>
    <string name="app_name">Sổ Chi Tiêu</string>
    <string name="nhap">Home</string>
    <string name="lich">Lịch</string>
    <string name="baocao">Báo Cáo</string>
    <string name="baocaodanhmuctrongnam">Báo cáo danh mục trong năm</string>
    <string name="baocaothuchitrongnam">Báo cáo thu chi trong năm</string>
    <string name="khac">Khác</string>
    <string name="timkiem">Tìm kiếm</string>
    <string name="thunhap">Thu nhập</string>
    <string name="chitieu">Chi tiêu</string>
    <string name="tienchi">Tiền chi</string>
    <string name="nhaptienchi">Nhập tiền chi</string>
    <string name="nhaptienthu">Nhập tiền thu</string>
    <string name="tienthu">Tiền thu</string>
    <string name="nhapghichu">Nhập ghi chú</string>
    <string name="ghichu">Ghi chú</string>
    <string name="khong">0</string>
    <string name="ngay">Ngày</string>
    <string name="ngayTruoc">Ngày trước</string>
    <string name="ngaySau">Ngày sau</string>
    <string name="danhmuc">Danh mục</string>
    <string name="tong">Tổng</string>
    <string name="chinhsua">Chỉnh sửa</string>
    <string name="taomoi">Danh mục</string>
    <string name="ten">Tên</string>
    <string name="nhaptendanhmuc">Vui lòng nhập tên danh mục</string>
    <string name="bieutuong">Biểu tượng</string>
    <string name="mausac">Màu sắc</string>
    <string name="thuchi">Thu chi</string>
    <string name="xoa">Xóa</string>
    <string name="luu">Lưu</string>
    <string name="vnd">₫</string>
    <string name="sodu">Số dư</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>