<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:orientation="vertical"
    android:background="@color/dark_blue"


    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15sp"
        android:background="@color/darker_blue"
        >
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tienchi"
            android:textSize="15sp"
            android:textColor="@color/lighter_blue"
            android:textStyle="bold"
            android:id="@+id/btnTienChi"
            android:background="@drawable/custom_button"
            app:backgroundTint="@null"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/btnTienThu"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn_selected"
            app:backgroundTint="@null"
            android:text="@string/tienthu"
            android:textColor="@color/lighter_blue"
            android:textSize="15sp"
            style="?android:attr/buttonBarButtonStyle"
            android:textStyle="bold">


        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNgay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:text="@string/ngay"
            android:textColor="@color/lighter_blue"
            android:textSize="15sp"
            android:textStyle="bold">

        </TextView>

        <ImageView
          android:layout_width="50sp"
          android:layout_height="50sp"
          android:contentDescription="@string/ngayTruoc"
          android:src="@drawable/ic_before"
          android:id="@+id/ivBefore"
          >
      </ImageView>
        <Button
            android:id="@+id/datepickerButton"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/ngay"
            android:textColor="@color/lighter_blue"
            android:textSize="14sp"
            android:backgroundTint="@color/darker_blue"
            android:onClick="showDatePicker"
            />

        <DatePicker
            android:id="@+id/datePicker"
            android:background="@drawable/custom_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />


        <ImageView
            android:contentDescription="@string/ngaySau"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_marginEnd="40sp"
            android:src="@drawable/ic_next"
            android:id="@+id/ivNext"
            >
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5sp"
        android:padding="10sp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/ghichu"
            android:textColor="@color/lighter_blue"
            android:textSize="15sp"
            android:textStyle="bold"

            />

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_weight="8"
                android:textColorHint="@color/lighter_blue"
                android:id="@+id/edtNhapGhiChu"
                android:hint="@string/nhapghichu"
                android:textColor="@color/lighter_blue"
                android:layout_marginStart="20sp"
                android:padding="15sp"
                >
       </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:paddingHorizontal="10dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tienchi"
            android:textColor="@color/lighter_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_weight="2"
            />
            <EditText
                android:layout_width="0dp"
                android:id="@+id/edtTienChi"
                android:layout_height="wrap_content"
                android:hint="@string/khong"
                android:textColorHint="@color/lighter_blue"
                android:background="@drawable/custom_editext"
                android:textStyle="bold"
                android:padding="15sp"
                android:inputType="number"
                android:layout_marginStart="20sp"
                android:layout_weight="8"
                android:autofillHints="">
            </EditText>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/lighter_blue"
            android:text="@string/vnd"
            android:layout_marginStart="15sp"
            android:layout_weight="1"
            >
        </TextView>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="10dp"
        android:text="@string/danhmuc"
        android:textColor="@color/lighter_blue"
        android:layout_marginTop="10sp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5sp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp">

        <GridView
            android:id="@+id/gvExtenseCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnWidth="100dp"
            android:gravity="center"
            android:horizontalSpacing="-8dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp"
            tools:listitem="@layout/custom_item_category"
            >
        </GridView>



            
            />

    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="60dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/nhaptienchi"
        android:textColor="@color/lighter_blue"
        android:background="@drawable/custom_editext"
        android:id="@+id/btnNhapTienChi"
        android:layout_marginBottom="15dp"
        />
</LinearLayout>